# WHYNOT

./: .gitignore  CMakeLists.txt  README.md  WHYNOT.sln
WHYNOT/: WHYNOT.cpp  WHYNOT.vcxproj  WHYNOT.vcxproj.filters
WHYNOT/assets/: assets.yaml  entities.yaml  widgets.yaml
WHYNOT/shaders/: debugFragment.glsl  fragment.glsl  fragment2D.glsl  fragment2D2Ch.glsl  fragment2DBW.glsl  fragmentColor.glsl  fragmentSky.glsl  neonFragment.glsl  textFragmentShader.glsl  textVertexShader.glsl  vertex.glsl  vertex2D.glsl
WHYNOT/src/: includes.h
assets/scenes/: Aliens.yaml  Editor.yaml  MainMenu.yaml  PhysicsSimulation.yaml  Platformer.yaml  Thrower.yaml
include/assimp/: revision.h
shaders/: debugFragment.glsl  fragment.glsl  fragment2DBW.glsl  fragment2DColor.glsl  vertex2D.glsl
src/: includes.h  main.cpp
src/Components/: Audio.cpp  Audio.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  Component.h  LightSource.h  Model.cpp  Model.h  Movement.cpp  Movement.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PlayerController.cpp  PlayerController.h  Sequence.cpp  Sequence.h  Transform.cpp  Transform.h
src/Editor/: EditorMode.cpp  EditorMode.h
src/Entities/: Alien.cpp  Alien.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
src/GameManagers/: AliensLogic.cpp  AliensLogic.h  GameManager.h  InMenuManager.cpp  InMenuManager.h  MapManager.cpp  MapManager.h  PhysicsSimulationManager.cpp  PhysicsSimulationManager.h  ThrowerManager.cpp  ThrowerManager.h
(+250 files in other folders)
